frontend/src/components/Layout/ProfileControl/ProfileControl.scss
:root {
    --avatar-bg: #00000013;
}

.dark-mode {
    --avatar-bg: #ffffff31;
}

.profile-control {
    display: flex;
    gap: 20px;
}

.profile-control {
    .avatar {
        flex-shrink: 0;
        
        display: flex;
        align-items: center;
        justify-content: center;

        width: 48px;
        height: 48px;

        background-color: var(--avatar-bg);

        border-radius: 50%;
        overflow: hidden;

        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
            object-position: center;
        }
    }

    .user-info {
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    .first-name {
        font-size: 18px;
    }

    .username {
        font-size: 14px;
        opacity: 0.5;
    }
}

